# int-enum-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  main.yml
impl/: Cargo.toml
impl/src/: ast.rs  expand.rs  lib.rs  serde.rs  util.rs
int-enum-impl/: Cargo.toml
int-enum-impl/src/: base.rs  convert.rs  dummy.rs  lib.rs  parse.rs  serde.rs
src/: ast.rs  error.rs  expand.rs  int.rs  lib.rs  span.rs  span_ext.rs
tests/: add_debug.rs  advanced.rs  basic.rs  bounds.rs  cases.rs  compile_tests.rs  convert.rs  int128.rs  issues.rs  serde.rs  test.rs
tests/compile_tests/: generics.rs  generics.stderr  incompatible_type.rs  incompatible_type.stderr  invalid_repr.stderr  invalid_repr2.rs  invalid_repr2.stderr  invalid_type.rs  invalid_type.stderr  invalid_variant.rs  invalid_variant.stderr  missing_discriminant.stderr  missing_repr.stderr  negative_unsigned.rs  negative_unsigned.stderr  overflow.rs  overflow.stderr  underflow.rs  underflow.stderr
tests/ui/: invalid_repr.rs  invalid_repr.stderr  invalid_repr2.stderr  missing_discriminant.rs  missing_discriminant.stderr  missing_repr.rs  missing_repr.stderr
