[package]
name = "int-enum"
version = "1.1.2"
authors = ["Juici <juicy66173@gmail.com>"]
description = "A derive macro for conversion between integer and enum types."
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

documentation = "https://docs.rs/int-enum"
repository = "https://github.com/Juici/int-enum-rs"

[lib]
proc-macro = true

[features]
default = []
colors = ["proc-macro2-diagnostics/colors"]

[dependencies]
proc-macro2 = "1.0.79"
proc-macro2-diagnostics = { version = "0.10.1", default-features = false }
quote = "1.0.35"
syn = "2.0.53"

[dev-dependencies]
rustversion = "1.0.14"
trybuild = "1.0.90"

[build-dependencies]
version_check = "0.9.4"
