[package]
name = "int-enum-impl"
version = "0.5.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Implementation detail of the `int-enum` crate."
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.60"

repository = "https://github.com/Juici/int-enum-rs"

[lib]
proc-macro = true

[features]
std = []

serde = []
convert = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

proc-macro-crate = "1.2"
