[package]
name = "int-enum-impl"
version = "0.1.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "A procedural macro for conversion between integer and enum types."

edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
