[package]
name = "int-enum-impl"
version = "0.2.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "A procedural macro for conversion between integer and enum types."
license = "MIT"

documentation = "https://docs.rs/int-enum"
homepage = "https://github.com/Juici/int-enum-rs"
repository = "https://github.com/Juici/int-enum-rs"

edition = "2018"

[lib]
proc-macro = true

[dependencies]
cfg-if = "0.1"
proc-macro-crate = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
default = [] # default feeatures are applied by parent crate
std = []
alloc = []
serialize = []
convert = []
